# ai-learning-platform

./: README.md  agentFlow.drawio  docker-compose.yaml  loki-actual.yaml  otel-actual.yaml  pyproject.toml  tempo-actual.yaml
.github/workflows/: deploy-website.yml
agentgateway/agentgateway-crds/templates/: agentgateway.dev_agentgatewaybackends.yaml  agentgateway.dev_agentgatewayparameters.yaml  agentgateway.dev_agentgatewaypolicies.yaml
agentgateway/agentgateway-install/: Chart.yaml  values.yaml
agentgateway/agentgateway-install/templates/: agentgateway-proxy.yaml  backend.yaml  directresponserout.yaml  jwtpolicy.yaml  mcpserver.yaml  policymock.yaml
agentgateway/httproute/: mcp-server.yaml  orchestratoragent.yaml
agentgateway/policy/: policy.yaml
agents/orchestrator/: Dockerfile  README.md  agent.yaml  docker-compose.yaml  kagent.yaml  pyproject.toml
agents/orchestrator/orchestrator/: agent-card.json  agent.py  cli.py  state.py
agents/orchestrator/orchestrator/nodes/: __init__.py  auth.py  classify_topic.py  generate_user_prompt.py  select_agent.py  tool_node.py
agents/template-agent/: Dockerfile  README.md  docker-compose.yaml  kagent.yaml  pyproject.toml
agents/template-agent/template-agent/: agent-card.json  agent.py  cli.py  state.py
agents/template-agent/template-agent/nodes/: __init__.py  get_config.py  task.py
cert-manager/: cert-manager-actual.yaml
cert-manager/templates/: certificate.yaml  issuer.yaml
docs/: docusaurus.config.ts
docs/blog/: authors.yml
documentation/: package-lock.json
grafana/: grafana-values.yaml
grafana/dashboards/: agent-grafana.json
infrastructure-umbrella/: Chart.yaml  values.yaml
infrastructure-umbrella/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
kagent/kagent-crds/: Chart.yaml
kagent/kagent-install/: Chart.yaml  values.yaml
keycloak/: standard-install.yaml  values.yaml
keycloak/templates/: deployment.yaml  service.yaml
loki/: loki-values.yaml
mcp-agent-control-plane/: .env.example  Dockerfile  README.md  agent-template.yaml  deploy.yaml  kmcp.yaml  mcp.yaml  pyproject.toml
mcp-agent-control-plane/src/: main.py
mcp-agent-control-plane/src/core/: __init__.py  utils.py
mcp-agent-control-plane/src/tools/: __init__.py  deploy_new_agent.py  list_available_agents.py  update_agent_config.py
mcp-agent-control-plane/tests/: test_server.py  test_tools.py
opentelemetry-collector/: Chart.yaml  otel-collector-audit-values.yaml  values.yaml
opentelemetry-collector/templates/: telemetry-shared-cert.yaml
postgresql/: postgres-actual.yaml  values.yaml
postgresql/templates/: cert-manager-res.yaml  postgres-alias.yaml
tempo/: tempo-values.yaml
ui/: package.json
website/: docusaurus.config.ts  package-lock.json  package.json
website/blog/: 2026-02-24-ia-to-learning.md
(+41 files in other folders)
